--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Sailscores.Web.Models.Sailscores.ClubSelectorModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -9,7 +11,7 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
+        <div class="carousel-item active">
             <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
@@ -20,7 +22,7 @@
                 </p>
             </div>
         </div>
-        <div class="item">
+        <div class="carousel-item">
             <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
@@ -31,7 +33,7 @@
                 </p>
             </div>
         </div>
-        <div class="item">
+        <div class="carousel-item">
             <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
@@ -84,11 +86,7 @@
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+        <h2>View a Club's results</h2>
+        @Html.Partial("ClubSelectorView", Model)
     </div>
 </div>
