--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sailscores.Web.Models.Sailscores.ClubSelectorModel
+﻿@model SailScores.Web.Models.SailScores.ClubSelectorModel
 
 @{
     ViewData["Title"] = "Home Page";
