--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -1,12 +1,12 @@
-﻿@using Sailscores.WebApp.Models.Sailscores
-@model Sailscores.WebApp.Models.Sailscores.SeriesViewModel
+﻿@using SailScores.Web.Models.SailScores;
+@model ClubItemViewModel<SailScores.Core.Model.Series>
 
 @{
-    ViewBag.Title = Model.Series.Name;
+    ViewBag.Title = Model.Item.Name;
     Layout = "_ClubLayout";
 }
 
-<h2>@Model.Series.Name</h2>
+<h2>@Model.Item.Name</h2>
 
 <table class="table">
     <thead>
@@ -16,43 +16,43 @@
             <th scope="col">Competitor</th>
             <th scope="col">Boat</th>
             <th scope="col" class="text-center">Total</th>
-            @foreach (var race in Model.Series.Results.Races)
-    {
-        <th class="text-center">@race.Name</th>
-}
+            @foreach (var race in Model.Item.Results.Races)
+            {
+                <th class="text-center">@race.Name</th>
+            }
         </tr>
     </thead>
     <tbody>
-    
-    @foreach (var comp in Model.Series.Results.Competitors)
-    {
-        <tr>
-            <th scope="row">@Model.Series.Results.Results[comp].Rank</th>
-            <th scope="row">@comp.SailNumber</th>
-            <th scope="row">@comp.Name</th>
-            <td>@comp.BoatName</td>
-            <td scope="row" class="text-center">@Model.Series.Results.Results[comp].TotalScore</td>
 
-            @foreach (var race in Model.Series.Results.Races)
-    {
-        
-            <td class="text-center">
-                @if (Model.Series.Results.GetResult(comp, race).Discard)
-    {
-            @Html.Raw("<span class='text-muted'>")
-            @Html.Raw("<s>")
-}
-                @Model.Series.Results.GetResult(comp, race)
-                @if (Model.Series.Results.GetResult(comp, race).Discard)
-    {
-            @Html.Raw("</s>")
-            @Html.Raw("</div>")
+        @foreach (var comp in Model.Series.Results.Competitors)
+        {
+            <tr>
+                <th scope="row">@Model.Series.Results.Results[comp].Rank</th>
+                <th scope="row">@comp.SailNumber</th>
+                <th scope="row">@comp.Name</th>
+                <td>@comp.BoatName</td>
+                <td scope="row" class="text-center">@Model.Series.Results.Results[comp].TotalScore</td>
 
-}
-            </td>
-}
-        </tr>
-    }
+                @foreach (var race in Model.Series.Results.Races)
+                {
+
+                    <td class="text-center">
+                        @if (Model.Series.Results.GetResult(comp, race).Discard)
+                        {
+                            @Html.Raw("<span class='text-muted'>")
+                            @Html.Raw("<s>")
+                        }
+                        @Model.Series.Results.GetResult(comp, race)
+                        @if (Model.Series.Results.GetResult(comp, race).Discard)
+                        {
+                            @Html.Raw("</s>")
+                            @Html.Raw("</div>")
+
+                        }
+                    </td>
+                }
+            </tr>
+        }
 
     </tbody>
 </table>
