WIP: Series Calculator
Tests!

--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Sailscores.Services.Dtos.RaceSummary>
+﻿@model IEnumerable<SailScores.Core.Model.Race>
 @using Microsoft.AspNetCore.Routing
 @{
     ViewData["Title"] = Context.GetRouteData().Values["ClubInitials"]+ " Races";
