--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -1,34 +1,39 @@
 ﻿@using Microsoft.AspNetCore.Routing
 @using SailScores.Web.Models.SailScores;
 @using SailScores.Core.Model;
-@model ClubItemViewModel<Race>
+@model ClubItemViewModel<RaceViewModel>
 
 @{
-    ViewBag.Title = Model.ClubInitials + " Race";
+    ViewBag.Title = Model.ClubInitials + " " + Model.Item.DisplayName;
     Layout = "_ClubLayout";
 }
 
-<h2>@Model.ClubInitials.ToUpperInvariant() @Model.Item.Name @Model.Item.Date</h2>
+<h2>
+    @Model.Item.DisplayName
+</h2>
+
+<h4>
+    @Model.Item.Fleet.Name
+</h4>
 
 <table class="table">
     <thead>
         <tr>
-            <th></th>
-            <th>Score</th>
+            <th>Sailor</th>
+            <th>Place</th>
         </tr>
     </thead>
     <tbody>
-        @*@foreach (var score in Model.Item)
+        @foreach (var score in Model.Item.Scores)
         {
             <tr>
                 <td>
                     @score.Competitor.Name
                 </td>
                 <td>
-                    @score.Value
+                    @score.Place
                 </td>
-
             </tr>
-        }*@
+        }
     </tbody>
 </table>
