WIP: Really not sure about this one

--- a/Sailscores.Client.Uwp/Views/SettingsPage.xaml
+++ b/Sailscores.Client.Uwp/Views/SettingsPage.xaml
@@ -87,8 +87,7 @@
                                 RelativePanel.AlignLeftWithPanel="True"
                                 RelativePanel.AlignTopWithPanel="True"
                                  Width="300"
-                                 ItemsSource="{Binding Clubs}"
-                                 SelectedItem="{Binding SelectedClub, Mode=TwoWay}"
+                                 ItemsSource="{Binding Clubs.Result, Mode=TwoWay}"
                                  DisplayMemberPath="Name" />
 
 
