Binding for club list working

--- a/Sailscores.Client.Uwp/Views/SettingsPage.xaml
+++ b/Sailscores.Client.Uwp/Views/SettingsPage.xaml
@@ -87,7 +87,8 @@
                                 RelativePanel.AlignLeftWithPanel="True"
                                 RelativePanel.AlignTopWithPanel="True"
                                  Width="300"
-                                 ItemsSource="{Binding Clubs.Result, Mode=TwoWay}"
+                                 ItemsSource="{Binding Clubs.Result}"
+                                 SelectedItem="{Binding SelectedClub, Mode=TwoWay}"
                                  DisplayMemberPath="Name" />
 
 
