--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -31,7 +31,7 @@
                     @score.Competitor.Name
                 </td>
                 <td>
-                    @score.Place
+                    @(score.Place == null ? score.Code : score.Place.ToString())
                 </td>
             </tr>
         }
