WIP: Fleet pages

--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -13,8 +13,8 @@
     <thead>
         <tr>
             <th scope="col">Place</th>
-            <th scope="col">Sail #</th>
-            <th scope="col">Competitor</th>
+            <th scope="col">Sail</th>
+            <th scope="col">Helm</th>
             <th scope="col">Boat</th>
             <th scope="col" class="text-center">Total</th>
             @foreach (var race in Model.Item.Results?.Races ?? Enumerable.Empty<Race>())
