--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Routing
 @using Sailscores.Web.Models.Sailscores;
 @using Sailscores.Core.Model;
-@model ClubCollectionViewModel<Race>
+@model ClubCollectionViewModel<RaceSummaryViewModel>
 
 @{
     ViewBag.Title = Model.ClubInitials + " Races";
@@ -11,39 +11,49 @@
 <h2>@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant() Races</h2>
 
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.List.First().Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.List.First().Date)
-            </th>
-            <th>
-                # of Boats
-            </th>
-            <th>
-            </th>
-        </tr>
-    </thead>
     <tbody>
-        @foreach (var item in Model.List)
+        @foreach (var item in Model.List.GroupBy(s => s.Season?.Name ?? String.Empty, s => s))
         {
-            <tr>
+            <tr id="@item.Key">
                 <td>
-                    @Html.ActionLink(item.Name, "Details", new { id=item.Id })
+                    <h2>@item.Key</h2>
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Scores.Count)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-
             </tr>
+            @foreach (var race in item)
+            {
+                <tr>
+                    <td>
+                        @Html.ActionLink(
+                            race.FleetShortName + " : Race " + @race.Order + " " + @race.Date?.ToString("dddd, MMMM d")
+                            , "Details", new { id = race.Id })
+                    </td>
+                    <td>
+                        @foreach (var seriesName in race.SeriesNames)
+                        {
+                            <a href="~/@Model.ClubInitials/@race.Season.Name/@seriesName">
+                                @Html.DisplayFor(modelItem => seriesName)
+                            </a>
+                        }
+                    </td>
+                    <td>
+
+                        @Html.DisplayFor(modelItem => race.Scores.Count)
+                        @if (race.Scores.Count == 1)
+                        {
+                            @:boat
+                        }
+                        else
+                        {
+                            @:boats
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => race.Name)
+                        @Html.DisplayFor(modelItem => race.Description)
+                    </td>
+
+                </tr>
+            }
         }
-    </tbody>
+        </tbody>
 </table>
