--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -19,7 +19,11 @@
             <th scope="col" class="text-center">Total</th>
             @foreach (var race in Model.Item.Results?.Races ?? Enumerable.Empty<Race>())
             {
-                <th class="text-center">@race.Name</th>
+                <th class="text-center">
+                 @Html.ActionLink(
+                    @race.Date?.ToString("M-d") + " R" + @race.Order
+                    , "Details", "Race",  new { id = race.Id })
+                </th>
             }
         </tr>
     </thead>
