--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -1,9 +1,11 @@
 ﻿
 
-/*$body-bg: #000;
-$body-color: #eee;*/
+$my-dark-color: #000B38;
+$theme-colors: (
+    'dark' : $my-dark-color
+);
 
-$font-family-base: "Open Sans","Segoe UI",sans-serif,$font-family-sans-serif;
+$font-family-base: "Open Sans", "Segoe UI", sans-serif;
 
 @import "./node_modules/bootstrap/scss/bootstrap";
 
