--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 <p class="lead">Simple score collection and reporting for one-design sailing.</p>
 <hr class="my-4">
 <div class="row">
-    <div class="col-md-6">
-        <h3>Key features</h3>
+    <div class="col-md-6 order-md-first order-last">
+        <h4>Planned features</h4>
         <ul>
             <li>Quick result entry, especially on mobile devices.</>
             <li>Integration with social media, such as automatic result posting to Twitter.</li>
@@ -18,5 +18,6 @@
     </div>
     <div class="col-md-6">
         @Html.Partial("ClubSelectorView", Model)
+        <hr class="my-4 d-md-none">
     </div>
 </div>
