--- a/SailScores.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -11,13 +11,12 @@
     <nav id="cookieConsent" class="navbar navbar-default navbar-fixed-top" role="alert">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#cookieConsent .navbar-collapse">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#cookieConsent .navbar-collapse">
                     <span class="sr-only">Toggle cookie consent banner</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="fa fa-info-circle"></span>
+                    <span>This site uses cookies.</span>
                 </button>
-                <span class="navbar-brand"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></span>
+                <span class="navbar-brand"></span>
             </div>
             <div class="collapse navbar-collapse">
                 <p class="navbar-text">
